--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,13 +32,13 @@ jobs:
 
       - name: Build Windows
         if: matrix.os == 'windows-latest'
-        run: npm run build
+        run: npm run build -- -p never
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Linux
         if: matrix.os == 'ubuntu-latest'
-        run: npm run build -- --linux
+        run: npm run build -- --linux -p never
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
