--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,10 @@ name: Build and Release
 
 on:
   push:
-    tags:
-      - 'v*'
+    branches:
+      - main
+    paths:
+      - 'package.json'
   workflow_dispatch:
 
 permissions:
@@ -30,6 +32,11 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
+      - name: Get Version
+        id: get_version
+        shell: bash
+        run: echo "VERSION=$(node -p "require('./package.json').version")" >> $GITHUB_OUTPUT
+
       - name: Build Windows
         if: matrix.os == 'windows-latest'
         run: npm run build -- -p never
@@ -44,8 +51,9 @@ jobs:
 
       - name: Upload Release Assets
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
         with:
+          tag_name: v${{ steps.get_version.outputs.VERSION }}
+          name: v${{ steps.get_version.outputs.VERSION }}
           files: |
             dist/*.exe
             dist/*.AppImage
