--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "p2p-file-share",
-  "version": "4.9.2",
+  "version": "4.9.3",
   "description": "P2P File Sharing Application",
   "repository": {
     "type": "git",
@@ -23,16 +23,18 @@
   "license": "MIT",
   "devDependencies": {
     "electron": "^28.0.0",
-    "electron-builder": "^24.9.1"
+    "electron-builder": "^24.13.3",
+    "electron-packager": "^17.1.2"
   },
   "build": {
     "appId": "com.p2pfileshare.app",
-    "productName": "P2P File Share",
+    "productName": "ProxiPass",
     "directories": {
       "output": "dist"
     },
     "asar": false,
     "win": {
+      "icon": "assets/icon.png",
       "target": [
         {
           "target": "nsis",
