--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "p2p-file-share",
-  "version": "4.9.6",
+  "name": "proxipass",
+  "version": "4.9.7",
   "description": "P2P File Sharing Application",
   "repository": {
     "type": "git",
@@ -52,7 +52,6 @@
     },
     "linux": {
       "target": [
-        "AppImage",
         "deb"
       ],
       "category": "Network"
